--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
         <selenium.version>4.16.1</selenium.version>
         <webdrivermanager.version>5.6.3</webdrivermanager.version>
         <slf4j.version>2.0.9</slf4j.version>
+        <rest-assured.version>5.3.2</rest-assured.version>
     </properties>
 
     <dependencies>
@@ -39,6 +40,13 @@
             <groupId>io.github.bonigarcia</groupId>
             <artifactId>webdrivermanager</artifactId>
             <version>${webdrivermanager.version}</version>
+        </dependency>
+        
+        <!-- REST Assured -->
+        <dependency>
+            <groupId>io.rest-assured</groupId>
+            <artifactId>rest-assured</artifactId>
+            <version>${rest-assured.version}</version>
         </dependency>
         
         <!-- SLF4J API -->
