--- a/src/test/resources/testomatio.properties
+++ b/src/test/resources/testomatio.properties
@@ -1,3 +1,4 @@
 testomatio.host=https://beta.testomat.io
 testomatio.project=testng-maven-example
-testomatio.reporter.interval=2000 
+testomatio.reporter.interval=2000
+testomatio.auto.register=false 
