--- a/pom.xml
+++ b/pom.xml
@@ -17,8 +17,14 @@
         <webdrivermanager.version>5.6.3</webdrivermanager.version>
         <slf4j.version>2.0.9</slf4j.version>
         <rest-assured.version>5.3.2</rest-assured.version>
-        <testomatio.version>0.4.1</testomatio.version>
     </properties>
+
+    <repositories>
+        <repository>
+            <id>jitpack.io</id>
+            <url>https://jitpack.io</url>
+        </repository>
+    </repositories>
 
     <dependencies>
         <!-- TestNG -->
@@ -50,13 +56,6 @@
             <version>${rest-assured.version}</version>
         </dependency>
         
-        <!-- Testomatio Reporter -->
-        <dependency>
-            <groupId>io.testomat</groupId>
-            <artifactId>testomatio-testng</artifactId>
-            <version>${testomatio.version}</version>
-        </dependency>
-        
         <!-- SLF4J API -->
         <dependency>
             <groupId>org.slf4j</groupId>
@@ -69,6 +68,11 @@
             <groupId>org.slf4j</groupId>
             <artifactId>slf4j-simple</artifactId>
             <version>${slf4j.version}</version>
+        </dependency>
+        <dependency>
+            <groupId>io.testomat</groupId>
+            <artifactId>testomatio-testng</artifactId>
+            <version>0.4.1</version>
         </dependency>
     </dependencies>
 
