--- a/src/test/resources/testomatio.properties
+++ b/src/test/resources/testomatio.properties
@@ -1,4 +1,5 @@
 testomatio.host=https://beta.testomat.io
 testomatio.project=testng-maven-example
 testomatio.reporter.interval=2000
-testomatio.auto.register=false
+testomatio.auto.register=true
+testomatio.api.key=tstmt_37tOLtp8_E9ttqgOVfGQWsZyZow2fAi6MA1741815403
